--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- HEADER / NAV -->
 <header id="top" role="banner" class="bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-200">
   <nav aria-label="Primary" class="flex gap-4 justify-center">
-    <a href="#hero" class="nav-link text-primary font-semibold hover:underline">Home</a>
+    <a href="index.html" class="nav-link text-primary font-semibold hover:underline">Home</a>
     <a href="#about" class="nav-link text-primary font-semibold hover:underline">About</a>
     <a href="#skills" class="nav-link text-primary font-semibold hover:underline">Skills</a>
     <a href="#projects" class="nav-link text-primary font-semibold hover:underline">Projects</a>
@@ -30,7 +30,7 @@
 
 <main>
   <!-- HERO -->
-  <section id="hero" class="min-h-screen flex flex-col items-center justify-center text-center p-8">
+  <section id="index.html" class="min-h-screen flex flex-col items-center justify-center text-center p-8">
     <img src="images/download.jpg" alt="Profile photo" class="w-40 h-40 object-cover rounded-full mx-auto" />
     <h1 class="text-4xl md:text-6xl font-bold mt-4">Marck Joshua A. Senin</h1>
     <p class="mt-4 text-xl text-slate-100">IT Student - Aspiring Web Developer - Web Designer</p>
@@ -141,7 +141,7 @@
 
   <!-- PROJECTS -->
   <section id="projects" class="p-8 max-w-5xl mx-auto">
-  <h2 class="text-3xl font-bold mb-6 text-center">Projects</h2>
+  <h2 class="text-3xl font-bold mb-6 text-center">My Projects Gallery</h2>
   <div class="grid gap-8">
 
     <!-- Project Card 1 -->
@@ -154,10 +154,9 @@
       <!-- Text on the right -->
       <div class="p-6 flex-1">
         <h3 class="font-bold text-xl mb-2">Candidat.Who?: A Barangay Bonuan Binloc Officials Information System</h3>
-        <p class="mb-4 text-gray-700 dark:text-gray-300">Short description of the project and technologies used.</p>
+        <p class="mb-4 text-gray-700 dark:text-gray-300">“Candidat.Who is a Barangay Bonuan Binloc Officials Information System that allows users to view, manage, and track local government officials’ profiles and activities. Built with Laravel, Php, JavaScript, and MySQL for a secure and dynamic database-driven experience.”</p>
         <div class="flex gap-3">
           <a href="https://github.com/Marck13241/Candidat-Who.git" target="_blank" class="bg-primary text-white px-4 py-2 rounded hover:bg-teal-600 transition">Code</a>
-          <a href="https://github.com/Marck13241/Candidat-Who" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
         </div>
       </div>
     </article>
@@ -168,11 +167,11 @@
         <img src="assets/about.png" alt="Project Screenshot" class="w-full md:w-96 h-48 md:h-64 object-cover rounded-lg"/>
       </div>
       <div class="p-6 flex-1">
-        <h3 class="font-bold text-xl mb-2">Elective Activity 2</h3>
-        <p class="mb-4 text-gray-700 dark:text-gray-300">Todo list with localStorage, filtering, responsive design. Built with HTML/CSS/JS.</p>
+        <h3 class="font-bold text-xl mb-2">Lab Activity 1</h3>
+        <p class="mb-4 text-gray-700 dark:text-gray-300">An activity in Elective 03 to create a "About Me" webpage. Built with HTML/CSS.</p>
         <div class="flex gap-3">
           <a href="https://github.com/Marck13241/Elective-Midterm-LabAct1.git" target="_blank" class="bg-primary text-white px-4 py-2 rounded hover:bg-teal-600 transition">Code</a>
-          <a href="https://github.com/Marck13241/Elective-Midterm-LabAct1" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
+          <a href="https://marck13241.github.io/Elective-Midterm-LabAct1/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
         </div>
       </div>
     </article>
@@ -183,11 +182,11 @@
         <img src="assets/labact.png" alt="Project Screenshot" class="w-full md:w-96 h-48 md:h-64 object-cover rounded-lg"/>
       </div>
       <div class="p-6 flex-1">
-        <h3 class="font-bold text-xl mb-2">Elective Activity 1</h3>
-        <p class="mb-4 text-gray-700 dark:text-gray-300">Todo list with localStorage, filtering, responsive design. Built with HTML/CSS/JS.</p>
+        <h3 class="font-bold text-xl mb-2">Lab Activity 2</h3>
+        <p class="mb-4 text-gray-700 dark:text-gray-300">A recap on how to use html. Built with HTML.</p>
         <div class="flex gap-3">
           <a href="https://github.com/Marck13241/Elective-Midterm-LabAct1.git" target="_blank" class="bg-primary text-white px-4 py-2 rounded hover:bg-teal-600 transition">Code</a>
-          <a href="https://github.com/Marck13241/Elective-Midterm-LabAct1" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
+          <a href="https://marck13241.github.io/html-portfolio/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
         </div>
       </div>
     </article>
@@ -199,10 +198,10 @@
       </div>
       <div class="p-6 flex-1">
         <h3 class="font-bold text-xl mb-2">Event-Driven Programming Activity</h3>
-        <p class="mb-4 text-gray-700 dark:text-gray-300">Todo list with localStorage, filtering, responsive design. Built with HTML/CSS/JS.</p>
+        <p class="mb-4 text-gray-700 dark:text-gray-300">A practice of how every mouse events works. Built with HTML.</p>
         <div class="flex gap-3">
-          <a href="https://github.com/Marck13241/Marck-Joshua.git" target="_blank" class="bg-primary text-white px-4 py-2 rounded hover:bg-teal-600 transition">Code</a>
-          <a href="https://github.com/Marck13241/Marck-Joshua" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
+          <a href="https://github.com/Marck13241/edp" target="_blank" class="bg-primary text-white px-4 py-2 rounded hover:bg-teal-600 transition">Code</a>
+          <a href="https://marck13241.github.io/edp/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 transition">Live Demo</a>
         </div>
       </div>
     </article>
